--- a/GAJaloyan/sample_report/rapport.tex
+++ b/GAJaloyan/sample_report/rapport.tex
@@ -115,7 +115,7 @@
 			\end{minipage}
 			\begin{minipage}[t]{0.25\textwidth}
 				\begin{flushleft}
-					\includegraphics[height=30mm]{images/ENS logo.jpg}
+					\includegraphics[height=30mm]{images/ENS-logo.jpg}
 					\textsc{\LARGE École Normale Supérieure}
 				\end{flushleft}
 			\end{minipage} \\[1.5cm]
