--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -18,18 +18,17 @@
 \usepackage{graphicx}
 
 
-
 \lstset{ %
 	basicstyle=\small\ttfamily,
-	breakatwhitespace=true,  
-	breaklines=false,        
-	commentstyle=\color{green!40!black},   
-	extendedchars=true,             
-	keepspaces=true,                
-	keywordstyle=\color{blue},      
+	breakatwhitespace=true,
+	breaklines=false,
+	commentstyle=\color{green!40!black},
+	extendedchars=true, 
+	keepspaces=true, 
+	keywordstyle=\color{blue},
 	showspaces=false,               
 	showstringspaces=false,         
-	showtabs=false,                  
+	showtabs=false,
 	tabsize=2
 }
   
@@ -37,8 +36,8 @@
   
   \title{Copilot : Traceability and Verification of a Low Level Automatically Generated C Source Code}
   \author{Georges-Axel Jaloyan}
-  \institute{\'Ecole Normale Supérieure, NASA Langley Research center, National Institute of Aerospace}
-  \date{August 24, 2015}
+  \institute{\'Ecole Normale Sup\'erieure, NASA Langley Research center, National Institute of Aerospace}
+  \date{August 12, 2015}
   
   \begin{document}
 \begin{frame}
@@ -638,146 +637,51 @@ const SDouble ext_ident_double_1788)
 
 \begin{frame}[fragile]
 	\frametitle{Dot File: "ext\_ident\_bool\_1789\_arg0.c"}
-	\begin{tikzpicture}[>=latex',line join=bevel,scale=0.6, every node/.style={scale=0.6}]
-	  \pgfsetlinewidth{1bp}
-	  %%
-	  \pgfsetcolor{black}
-	  % Edge: 2 -> 3
-	  \draw [->] (220.98bp,143.7bp) .. controls (210.87bp,134.97bp) and
-	  (198.46bp,124.24bp)  .. (179.79bp,108.1bp);
-	  % Edge: 326 -> 648
-	  \draw [->] (352.58bp,71.876bp) .. controls (369.07bp,62.639bp) and
-	  (389.62bp,51.131bp)  .. (416.3bp,36.19bp);
-	  % Edge: 326 -> 327
-	  \draw [->] (322.0bp,71.697bp) .. controls (322.0bp,63.983bp) and
-	  (322.0bp,54.712bp)  .. (322.0bp,36.104bp);
-	  % Edge: 1 -> 2
-	  \draw [->] (241.0bp,215.7bp) .. controls (241.0bp,207.98bp) and (241.0bp,198.71bp)
-	  .. (241.0bp,180.1bp);
-	  % Edge: 3 -> 4
-	  \draw [->] (129.42bp,71.876bp) .. controls (112.93bp,62.639bp) and
-	  (92.376bp,51.131bp)  .. (65.696bp,36.19bp);
-	  % Edge: 0 -> 1
-	  \draw [->] (241.0bp,287.72bp) .. controls (241.0bp,279.97bp) and
-	  (241.0bp,270.79bp)  .. (241.0bp,252.0bp);
-	  % Edge: 2 -> 326
-	  \draw [->] (261.02bp,143.7bp) .. controls (271.13bp,134.97bp) and
-	  (283.54bp,124.24bp)  .. (302.21bp,108.1bp);
-	  % Edge: 3 -> 5
-	  \draw [->] (160.0bp,71.697bp) .. controls (160.0bp,63.983bp) and
-	  (160.0bp,54.712bp)  .. (160.0bp,36.104bp);
-	  % Node: 1
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{0.87,0.63,0.87};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{0.87,0.63,0.87};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (299.0bp,252.0bp) -- (183.0bp,252.0bp) -- (183.0bp,216.0bp) --
-	  (299.0bp,216.0bp) -- cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (241.0bp,234.0bp) node {label: vertical\_RA};
-	  \end{scope}
-	  % Node: 0
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{1.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{1.0,0.0,0.0};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (327.0bp,326.0bp) -- (155.0bp,326.0bp) -- (155.0bp,288.0bp) --
-	  (327.0bp,288.0bp) -- cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (241.0bp,310.8bp) node {file: };
-	  \draw (241.0bp,295.8bp) node {ext\_ident\_bool\_1789\_arg0.c};
-	  \end{scope}
-	  % Node: 3
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{0.0,0.55,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{0.0,0.55,0.0};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (200.0bp,108.0bp) -- (123.0bp,108.0bp) -- (123.0bp,73.0bp) -- (200.0bp,73.0bp) --
-	  cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (160.0bp,90.0bp) node {op2: \texttt{<=}};
-	  \end{scope}
-	  % Node: 2
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{0.0,0.55,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{0.0,0.55,0.0};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (281.0bp,180.0bp) -- (204.0bp,180.0bp) -- (204.0bp,145.0bp) -- (281.0bp,145.0bp) --
-	  cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (241.0bp,162.0bp) node {op2: \texttt{\&\&}};
-	  \end{scope}
-	  % Node: 326
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{0.0,0.55,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{0.0,0.55,0.0};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (362.0bp,108.0bp) -- (285.0bp,108.0bp) -- (285.0bp,73.0bp) -- (362.0bp,73.0bp) --
-	  cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (322.0bp,90.0bp) node {op2: \texttt{<=}};
-	  \end{scope}
-	  % Node: 4
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{1.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{1.0,0.0,0.0};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (70.0bp,36.0bp) -- (0.0bp,36.0bp) -- (0.0bp,0.0bp) -- (70.0bp,0.0bp) --
-	  cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (35.0bp,18.0bp) node {const: 0.0};
-	  \end{scope}
-	  % Node: 648
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{1.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{1.0,0.0,0.0};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (482.0bp,36.0bp) -- (412.0bp,36.0bp) -- (412.0bp,0.0bp) --
-	  (482.0bp,0.0bp) -- cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (447.0bp,18.0bp) node {const: 0.0};
-	  \end{scope}
-	  % Node: 5
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{0.0,0.55,0.55};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{0.0,0.55,0.55};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (232.0bp,36.0bp) -- (88.0bp,36.0bp) -- (88.0bp,0.0bp) -- (232.0bp,0.0bp)
-	  -- cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (160.0bp,18.0bp) node {ext\_ident\_double\_1778};
-	  \end{scope}
-	  % Node: 327
-	  \begin{scope}
-	  \definecolor{strokecol}{rgb}{0.0,0.55,0.55};
-	  \pgfsetstrokecolor{strokecol}
-	  \definecolor{fillcol}{rgb}{0.0,0.55,0.55};
-	  \pgfsetfillcolor{fillcol}
-	  \filldraw (394.0bp,36.0bp) -- (250.0bp,36.0bp) -- (250.0bp,0.0bp) --
-	  (394.0bp,0.0bp) -- cycle;
-	  \definecolor{strokecol}{rgb}{0.0,0.0,0.0};
-	  \pgfsetstrokecolor{strokecol}
-	  \draw (322.0bp,18.0bp) node {ext\_ident\_double\_1788};
-	  \end{scope}
-	  %
-	  \end{tikzpicture}
-	  % End of code
+	An example of a dot graph associated to a C source file.\\
+	\begin{figure}
+		\includegraphics[width=100mm]{images/graph.ps}
+	\end{figure}
+	
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Magic labels}
+	The possibility to add labels that would be printed in the C source file was also added in SBV and in Copilot. \\~\\
+	The prover was not able to prove long expressions (some were 500000 characters long).\\~\\
+	So we need to add a special instruction that has one only role : split the AST into smaller ones that can be easily provable. This instruction has to be totally useless regarding to the semantics of the language. Labels do not change the semantics of the program. So why not using them ? \\~\\
+	The idea is to call the function identity when we encounter a magic label. This is equivalent to the transformation : $ e \rightarrow_{\beta} (\lambda x . x) e $. 
+
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Magic labels: example}
+\begin{minted}{haskell}
+import qualified Copilot.Compile.SBV as S
+
+alt :: Stream Bool
+alt = (label "?splitting" $ not $ 
+      externB "externvar" Nothing)
+
+spec :: Spec
+spec = do
+trigger "trigger" (alt) []
+
+main = do
+reify spec >>= S.proofACSL S.defaultParams
+\end{minted}
+
+
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Magic labels: example}
+	~\\
+	\begin{figure}
+		\includegraphics[width=33mm]{images/label/main.ps}
+		\centering
+		\includegraphics[width=33mm]{images/label/splitted.ps}
+		\includegraphics[width=33mm]{images/label/splitted2.ps}
+	\end{figure}
 	
 \end{frame}
 
@@ -828,10 +732,201 @@ const SDouble ext_ident_double_1788)
 	\end{figure}
 \end{frame}
   	
-  	\section{Conclusion}
-  	\begin{frame}
-  		\frametitle{Questions}
-  		\text{Questions ?}
-  	\end{frame}
   	
-  \end{document}
+\begin{frame}[fragile]
+	\begin{figure}[ht!]
+		\centering
+		\tiny
+		\begin{tikzpicture}[->, node distance=2cm, auto, shorten >=1pt, bend angle=45,
+		thick]
+		\tikzstyle{every state}=[rectangle, rounded corners]
+		
+		
+		\node[state] (Int) {Interpreter};
+		\node[state] (Lang) [above right of=Int]
+		{
+			\begin{tabular}[b]{l}
+			Copilot Libraries\\ \hline Copilot Language
+			\end{tabular}};
+		
+		\node[state] (M4) [left=2cm of Lang] {M4};
+		\node[state] (Core) [below right of=Lang] {Copilot Core};
+		\node[state] (PP) [right of=Core] {Pretty Printer};
+		
+		
+		\node[state] (ACSL) [below of=PP] {\begin{tabular}[b]{l}
+			ACSL\\ generator
+			\end{tabular}};
+		\node[state] (DOTc) [right of=ACSL] {\begin{tabular}[b]{l}
+			DOT\\ generator
+			\end{tabular}};
+		\node[state] (SBV) [below of=Core] {SBV Back-End};
+		\node[state] (C99S) [below of=SBV] {\begin{tabular}[b]{l}
+			DOT\\ \hline ACSL\\ \hline C99
+			\end{tabular}};
+		\node[state] (DOT) [below right of=C99S] {DOT/graphviz};
+		\node[state] (CCOMP) [below left=0.3cm and 0.3cm of C99S] {CompCert};
+		\node[state] (ASM) [below=0.5cm of CCOMP] {Assembly code};
+		
+		
+		\tikzstyle{every node}=[]
+		
+		
+		\path %% (Libs) edge node {0,1,L} (Lang);
+		%% edge node {1,1,R} (C)
+		(Lang) edge [bend left, anchor=west, text width=2.5cm] node {Reification and DSL-specific type-checking} (Core)
+		%% edge node {0,1,L} (C)
+		(M4) edge [] node {Preprocessing} (Lang)
+		(Core) edge [anchor=east] node {Translation} (SBV)
+		edge node {} (PP)
+		edge node [swap] {Evaluation} (Int)
+		(ACSL) edge [bend left, anchor=west, blue] node {Integration} (C99S)
+		(DOTc) edge [bend left, anchor=east, blue] node {} (C99S)
+		(Int) edge [<->,red, bend right, anchor=east] node {QuickCheck} (SBV)
+		(PP) edge [->,blue, anchor=east] node {ACSL generation} (ACSL)
+		(PP) edge [->,blue, anchor=west] node {DOT generation} (DOTc)
+		(C99S) edge [->,blue, anchor=north west] node {make} (CCOMP)
+		(CCOMP) edge [->,blue, anchor=east] node {Cross-compilation} (ASM)
+		(C99S) edge [loop left, ->,blue, anchor=east] node {Verification with frama-c WP plugin} (C99S)
+		(C99S) edge [->,blue, anchor=west] node {Extraction and graph generation} (DOT)
+		(SBV) edge [->,anchor=east] node {Compilation} (C99S);
+		%% edge [bend left] node {Translation} (SBV)
+		%% (Atom) edge [loop below] node {1,1,R} (D)
+		%% edge node {0,1,R} (Libs)
+		%% (SBV) edge [bend left] node {1,0,R} ();
+		\end{tikzpicture}
+	\end{figure}
+\end{frame}
+
+
+\subsection{Bug finding}
+\begin{frame}
+	\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{And it works !}
+	Some front-end bugs :
+\begin{itemize}
+	\item A reduction of $2^x$ to $2 << x$ instead of $1 << x$.
+	\item A reduction of $0^0$ to $0$ instead of $1$.
+	\item A reduction of $0^x$ to $0$ instead of $mux (x==0) (1) (0)$.
+\end{itemize}
+	
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Backend bug}
+	
+	A major SBV back-end bug (never detected by model checking). In a 900 characters long contract of a 100 lines of C code file :
+	
+\begin{lstlisting}[language=C]
+/*@
+ensure s27 == 
+  ((ext_sqrt_0) / (ext_max_time_for_hor_violation));
+*/
+SBool trigger(...)
+{
+  const SDouble s11 = ext_max_time_for_hor_violation;
+  const SDouble s13 = ext_sqrt_1;
+  const SDouble s27 = s13 / s11;
+}  
+\end{lstlisting}
+	
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Backend bug}
+	
+	This similar bug can be generated with the following haskell code :
+\begin{minted}{haskell}
+x = externFun "f" [arg 0]
+y = externFun "f" [arg 1]
+s :: Stream Double
+s = x + (y + x)
+\end{minted}
+
+\begin{lstlisting}[language=C, keywordstyle=\color{blue}]
+/*@
+ensure \result == 
+   ((ext_f_0) + ((ext_f_1) + (ext_f_0)));
+*/
+SBool trigger(...)
+{
+  const SDouble s0 = ext_f_0;
+  const SDouble s1 = ext_f_1;
+  const SDouble s2 = s1 + s1;  // should be s1 + s0;
+  const SDouble s3 = s0 + s2;
+  return s3;
+}  
+\end{lstlisting}
+\end{frame}
+
+\section{Applications}
+\subsection{Self-separation criteria}
+\begin{frame}
+	\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]
+\end{frame}
+
+
+\begin{frame}[fragile]
+	\frametitle{Self-separation criterion}
+	We use the criterion defined in \textit{State-Based Implicit Coordination
+	and Applications} by Anthony J. Narkawicz and C\'esar A. Mu\~{n}oz.
+
+	The implementation is 262 lines long, generating in prover mode 433 source files, that are verified by frama-c in 2 min and 39 sec on an intel i5-4200U using the following bash command (which uses GNU parallel) : 
+\begin{lstlisting}
+parallel frama-c -wp -wp-out . -wp-timeout 20 
+-wp-prover CVC4 -wp-split {} ::: *.c | tee 
+>logfwp >(grep 'Proved\|Unknown\|Timeout\|Failed
+\|Qed:\s\|CVC4:\s\|Parsing .*\.c' > logfwpcompact) 
+>(grep 'Proved\|Qed:\s\|CVC4:\s\|Unknown\|Timeout
+\|Failed\|Parsing .*\.c')
+\end{lstlisting}
+	
+	In compiling mode, the copilot toolchain generates only 19 files, which are compiled in less than a second with CompCert.
+\end{frame}
+
+
+\subsection{TCAS II}
+\begin{frame}
+	\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{TCAS II}
+	We use the TCAS II implementation in PVS and detailed in \textit{A TCAS-II Resolution Advisory Detection Algorithm} by C\'esar A. Mu\~{n}oz, Anthony J. Narkawicz and James Chamberlain. \\~\\	
+	We implemented the alert trigger, and the corrective trigger.
+	Both are 447 lines long. \\~\\
+	Alert only version :
+\begin{itemize}
+\item Proof mode : 150 files verified in 13 min and 8 sec
+\item Compile mode : 4 files compiled in 2 sec
+\end{itemize}
+Corrective trigger version :
+\begin{itemize}
+\item Proof mode : 1790 files verified in 
+\item Compile mode : 
+\end{itemize}
+	
+\end{frame}
+
+\subsection{Well-Clear}
+\begin{frame}
+	\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]
+\end{frame}
+
+
+\begin{frame}[fragile]
+	\frametitle{Well-Clear}
+	
+	Last implementation : Well-Clear criterion defined in \textit{A Family of Well-Clear Boundary Models for the Integration of UAS in the NAS} by C\'esar A. Mu\~{n}oz, Anthony J. Narkawicz and James Chamberlain, Mar\'ia Consiglio and Jason Upchurch.
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Questions}
+	\text{Questions ?}
+\end{frame}
+  	
+\end{document}
