--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -921,7 +921,54 @@ Corrective trigger version :
 	\frametitle{Well-Clear}
 	
 	Last implementation : Well-Clear criterion defined in \textit{A Family of Well-Clear Boundary Models for the Integration of UAS in the NAS} by C\'esar A. Mu\~{n}oz, Anthony J. Narkawicz and James Chamberlain, Mar\'ia Consiglio and Jason Upchurch.
+	
+	\begin{figure}
+		\includegraphics[height=16mm]{images/WCV/tau.pdf}\\
+		\includegraphics[height=16mm]{images/WCV/tcpa.pdf}\\
+		\includegraphics[height=16mm]{images/WCV/taumod.pdf}\\
+	\end{figure}
+	
 
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Well-Clear}
+
+	
+	\begin{figure}
+		\includegraphics[height=15mm]{images/WCV/tep.pdf}\\
+	\end{figure}
+		where
+	\begin{figure}
+		\includegraphics[height=15mm]{images/WCV/theta.pdf}\\
+	\end{figure}
+	
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Well-Clear}
+	
+	
+	\begin{figure}
+		\includegraphics[height=30mm]{images/WCV/wcv.pdf}\\
+	\end{figure}
+	where
+	\begin{figure}
+		\centering
+		\includegraphics[height=18mm]{images/WCV/tcoa.pdf}\\
+$d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \textbf{v})\textbf{v} \parallel$
+	\end{figure}
+	
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Well-Clear}
+	
+	
+	\begin{figure}
+		\includegraphics[height=75mm]{images/WCV/graph.pdf}\\
+	\end{figure}
+	
 \end{frame}
 
 \begin{frame}
