--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -905,8 +905,8 @@ parallel frama-c -wp -wp-out . -wp-timeout 20
 \end{itemize}
 Corrective trigger version :
 \begin{itemize}
-\item Proof mode : 1790 files verified in 
-\item Compile mode : 
+\item Proof mode : 1790 files verified in 4h38.
+\item Compile mode : 5 files compiled in 2 sec
 \end{itemize}
 	
 \end{frame}
@@ -976,22 +976,37 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 	
 	
 	\begin{itemize}
-		\item Prover mode : xxx files verified in xxx
-		\item Compiler mode : xxx files compiled in xxx
+		\item Prover mode : 2140 files verified in xxx
+		\item Compiler mode : 262 files compiled in 10 sec
 	\end{itemize}
+	
+	A unit test was written for the generated code in C99, but lacks some domain specific examples.
 	
 \end{frame}
 
 \begin{frame}[fragile]
 	\frametitle{Well-Clear : Making it work}
 	
-	There remains the main.c file, and producing a complete executable, for testing it.
+	The main.c file, producing a complete executable, was written and is effective.
 	\begin{itemize}
 		\item OS : Windows 7, 64 bits (without any additional feature).
 		\item Input : on stdin, an integer (0 for new plane entering the control area, 1 for leaving, 2 for updates) and an identification number (ICAO24 ideally). If it is an update, we have to add on stdin the latitude, longitude, altitude, x, y and z velocity (x east, y north, z up).
 		\item Output : some debug information and a matrix on which a cross appears if a Well Clear Violation occurs (the shape of the cross depends on the type of violation, according to different time variables).
 	\end{itemize}
 	
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{What next ?}
+	\begin{itemize}
+		\item Add more cases for unit testing of WCV
+		\item Test the WCV in a real situation (fall 2015)
+		\item Find other new applications
+		\item Develop new libraries (matrix, math functions)
+		\item Reimplement the QuickCheck for SBV backend
+		\item Submit a paper
+	\end{itemize}
 \end{frame}
 
 \begin{frame}
