--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -998,7 +998,7 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 
 
 \begin{frame}
-	\frametitle{What next ?}
+	\frametitle{What's next ?}
 	\begin{itemize}
 		\item Add more cases for unit testing of WCV
 		\item Test the WCV in a real situation (fall 2015)
