Some typos fixed

--- a/TutorialAndDevGuide/Tutorial/Tools.tex
+++ b/TutorialAndDevGuide/Tutorial/Tools.tex
@@ -239,4 +239,6 @@ The trigger has been evoked!
 \end{code}
 %
 
+\subsection{Correcness of the generated code}
+
 \todo{George-Axel} describe what must be done to invoke the provers. 
