--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -976,11 +976,11 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 	
 	
 	\begin{itemize}
-		\item Prover mode : 2140 files verified in xxx
+		\item Prover mode : 2140 files verified in 17 min.
 		\item Compiler mode : 262 files compiled in 10 sec
 	\end{itemize}
 	
-	A unit test was written for the generated code in C99, but lacks some domain specific examples.
+	A unit test was written for the generated code in C99, with some test cases provided.
 	
 \end{frame}
 
@@ -999,14 +999,15 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 
 \begin{frame}
 	\frametitle{What's next ?}
-	\begin{itemize}
+	\begin{enumerate}
 		\item Add more cases for unit testing of WCV
 		\item Test the WCV in a real situation (fall 2015)
 		\item Find other new applications
 		\item Develop new libraries (matrix, math functions)
 		\item Reimplement the QuickCheck for SBV backend
 		\item Submit a paper
-	\end{itemize}
+		\item goto 1:
+	\end{enumerate}
 \end{frame}
 
 \begin{frame}
