--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -154,7 +154,7 @@ lmpick@zoho.com\\
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
-George-Axel Jaloyan \\
+Georges-Axel Jaloyan \\
 \small{
 georges-axel.jaloyan@ens.fr\\
 }
